# lucien

./: .env  .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  download_model.sh
src/: app_config.rs  main.rs
src/apis/: errors.rs  mod.rs  models.rs  openlibrary.rs
src/ebook/: ebook_metadata.rs  errors.rs  mod.rs  models.rs
src/llm/: factory.rs  llama_model.rs  mod.rs  model.rs  traits.rs
src/tests/resources/: test_book.epub
tests/resources/: test_book.epub
