[package]
name = "lucien"
description = "A rust cli application to fix ebook metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }  # needed for async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
log = "0.4.28"
simplelog = { version = "0.12.2", features = ["paris"]}

[dev-dependencies]
mockall = "0.13.1"
